gateway.yaml
apiVersion: fanplane.io/v1alpha1
kind: Gateway
metadata:
  name: test-id
  namespace: default
spec:
  listener:
    port: 8080
    protocol: HTTP

  routes:
  - type: CONSUL_DNS
    prefix: /iris/settings/
    service:
      name: ural2
      tag: rc0
    rewrite:
      uri: /promotion/v1/
    connectionPool:
      timeout: 5s
    retryPolicy:
      numRetries: 2
      perTryTimeout: 1s
    loadBalancer:
      type: ROUND_ROBIN

  - type: CONSUL_DNS
    prefix: /graphql
    service:
      name: data-services
      tag: rc
    retryPolicy:
      numRetries: 2
      perTryTimeout: 1s
    tlsContext:
      sni: rc-data-services.dev.frgcloud.com

  - type: CONSUL_DNS
    prefix: /graphql2
    service:
      name: data-services
    retryPolicy:
      numRetries: 2
      perTryTimeout: 1s

  - type: DNS
    prefix: /flex/v1/keys
    dns:
      address: api.cybersource.com
      port: 443
    connectionPool:
      timeout: 6s
    retryPolicy:
      numRetries: 2
      perTryTimeout: 500ms
